nginx Dockerfile: TSL

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,3 +4,6 @@ RUN apt-get update -y && apt-get upgrade -y
 RUN apt-get install -y nginx
 RUN apt-get install -y curl
 RUN apt-get install -y openssl
+
+RUN mkdir -p /etc/nginx/ssl
+RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=mfeldman.42.fr/UID=mfeldman"
