--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,9 +1,12 @@
-[server]
 [mysqld]
-user				= mysql
-port				= 3306
-basedir				= /usr
-datadir				= /var/lib/mysql
-socket				= /var/run/mysqld/mysqld.sock
-skip_networking		= off
-max_allowed_packet  = 64M
+
+user                    = mysql	
+pid-file                = /run/mysqld/mysqld.pid
+socket                  = /run/mysqld/mysqld.sock
+port			= 3306
+basedir                 = /usr
+datadir                 = /var/lib/mysql
+tmpdir                  = /tmp
+lc-messages-dir         = /usr/share/mysql
+bind-address            = *
+skip-networking		= false
