--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,35 +1,28 @@
-user www-data;
-
 events {
-	worker_connections 1024;
+		worker_connections 1024;
 }
 
 http {
+	include /etc/nginx/mime.types;
 
 	server {
 		listen 443 ssl;
 		listen [::]:443 ssl;
-
-		ssl_protocols TLSv1.2 TLSv1.3;
 		ssl_certificate /etc/nginx/ssl/inception.crt;
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-		root /var/www/html/wordpress;
-		index index.php;
+		root /var/www/html;
+		server_name localhost;
+		index index.php index.html index.htm;
 
 		location / {
-			include /etc/nginx/mime.types;
 			try_files $uri $uri/ =404;
 		}
 
 		location ~ \.php$ {
-			fastcgi_split_path_info ^(.+\.php)(/.+)$; 
-			fastcgi_param SCRIPT_FILENAME $request_filename;
-			include fastcgi_params;
-			fastcgi_pass wordpress:9000; 	
-			fastcgi_param HTTPS on;
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
 		}
-
-		gzip on;
 	}
 }
+
