--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,7 +12,7 @@ http {
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 		root /var/www/html;
-		server_name localhost;
+		server_name mfeldman.42.fr;
 		index index.php index.html index.htm;
 
 		location / {
