--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   mariadb:
     image: mariadb:1.0
@@ -75,7 +77,9 @@ volumes:
       type: 'none'
       o: 'bind'
       device: '/home/mfeldman/data/wordpress'
+
 networks:
   inception:
+    name: inception
     driver: bridge
 
